<resources>
    <string name="app_name">Backpack</string>
    <string name="stub" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
    in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
    sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt laborum.</string>
    <string name="stub_md" translatable="false">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
    Aenean commodo ligula eget dolor.
    Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</string>
    <string name="stub_sm" translatable="false">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
    Aenean commodo ligula eget dolor.
    Aenean massa.</string>
    <string name="stub_xs" translatable="false">Lorem ipsum dolor sit amet.</string>
    <string name="txt_lorem_ipsum">Lorem ipsum</string>
    <string name="txt_lorem_ipsum_link">Lorem ipsum <a href="https://skyscanner.design">Click me!</a></string>
    <string name="preference_file_key">bpk_preferences</string>
    <string name="rating_sample_const_title">Constant Title</string>
    <string name="rating_sample_const_subtitle">Constant Subtitle</string>
    <string name="modal_bottom_sheet_title">Bottom Sheet Title</string>
    <string name="modal_bottom_sheet_title_content_desc">Custom title content description</string>
    <string-array name="rating_sample_titles">
        <item>Low Title</item>
        <item>Medium Title</item>
        <item>High Title</item>
    </string-array>
    <string-array name="rating_sample_subtitles">
        <item>Low Subtitle</item>
        <item>Medium Subtitle</item>
        <item>High Subtitle</item>
    </string-array>
    <string name="star_rating_description">Rating</string>
    <string name="star_rating_accessibility_status" formatted="false">%.0f out of %d</string>
    <string name="star_rating_decimal_accessibility_status" formatted="false">%.1f out of %d</string>
    <string name="star_rating_0_5">0 out of 5</string>
    <string name="star_rating_25_5">2.5 out of 5</string>
    <string name="star_rating_3_5">3 out of 5</string>
    <string name="star_rating_5_5">5 out of 5</string>
    <string name="star_rating_2_5_rtl">2 out of 5 RTL</string>
    <string name="star_rating_5_8">5 out of 8</string>
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_explore">Explore</string>
    <string name="bottom_nav_trips">Trips</string>
    <string name="bottom_nav_profile">Profile</string>
    <string name="image_rockies_content_description">Image of woman standing on a pier by a lake in the mountains</string>
    <string name="image_sunset_content_description">Image of man floating on water watching sunset</string>
    <string name="overlay_rounded_corners">Rounded corners</string>
    <string name="overlay_no_rounded_corners">No rounded corners</string>
    <string name="icons_small">Small</string>
    <string name="icons_large">Large</string>
    <string name="icons_extra_large">Extra Large</string>
    <string name="icons_color">In color</string>
    <string name="icons_flight">Flight icon</string>
    <string name="icons_car">Car icon</string>
    <string name="icons_hotel">Hotel icon</string>
    <string name="input_placeholder">Placeholder</string>
    <string name="input_entering">Entering…</string>
    <string name="input_disabled">Disabled</string>
    <string name="input_label">Label</string>
    <string name="input_error">Error message</string>
    <string name="input_helper">Help text</string>
    <string name="settings_title">Settings</string>
    <string name="settings_selected">Selected</string>
    <string name="settings_section_theme">Component Themes</string>
    <string name="settings_option_theme_title">Enable themes</string>
    <string name="settings_option_theme_description">This will enable themes for compatible components</string>
    <string name="settings_theme_doha">Doha</string>
    <string name="settings_theme_london">London</string>
    <string name="story_badge_compose">Compose-only</string>
    <string name="story_badge_view">View-only</string>
    <string name="text_subheading">Subheading</string>
    <string name="text_body_default">Body Default</string>
    <string name="text_body_longform">Body Longform</string>
    <string name="text_footnote">Footnote</string>
    <string name="text_caption">Caption</string>
    <string name="text_label1">Label 1</string>
    <string name="text_label2">Label 2</string>
    <string name="text_label3">Label 3</string>
    <string name="text_heading1">Heading 1</string>
    <string name="text_heading2">Heading 2</string>
    <string name="text_heading3">Heading 3</string>
    <string name="text_heading4">Heading 4</string>
    <string name="text_heading5">Heading 5</string>
    <string name="text_hero1">Hero 1</string>
    <string name="text_hero2">Hero 2</string>
    <string name="text_hero3">Hero 3</string>
    <string name="text_hero4">Hero 4</string>
    <string name="text_hero5">Hero 5</string>
    <string name="button">Button</string>
    <string name="button_increased">%s increased</string>
    <string name="button_short_text">Short Text</string>
    <string name="button_long_text">Long Text Long Text Long Text Long Text Long</string>
    <string name="button_custom_content_description">Custom Content Description</string>
    <string name="toggle_default">Default</string>
    <string name="toggle_indeterminate">Indeterminate</string>
    <string name="toggle_default_unchecked">Default Unchecked</string>
    <string name="toggle_default_checked">Default Checked</string>
    <string name="toggle_default_rtl">Default RTL</string>
    <string name="toggle_disabled_unchecked">Disabled Unchecked</string>
    <string name="toggle_disabled_checked">Disabled Checked</string>
    <string name="toggle_custom_title">Custom</string>
    <string name="toggle_custom_subtitle">Content</string>
    <string name="toggle_long_text">Long Text Long Text Long Text Long Text Long Text Long Text Long Text Long Text Long Text Long Text Long Text Long Text Long Text Long</string>
    <string name="toggle_no_label">Without Label</string>
    <string name="toggle_checkbox_trailing">Checkbox Trailing</string>
    <string name="toggle_with_icon">Label with Icon</string>
    <string name="toggle_with_icon_trailing">Label with Icon Trailing</string>
    <string name="toggle_with_icon_content_description">More information</string>
    <string name="toggle_on_contrast_unchecked">On Contrast Unchecked</string>
    <string name="toggle_on_contrast_intermediate">On Contrast Indeterminate</string>
    <string name="toggle_on_contrast_checked">On Contrast Checked</string>
    <string name="toggle_on_contrast_disabled_unchecked">On Contrast Disabled Unchecked</string>
    <string name="toggle_on_contrast_disabled_checked">On Contrast Disabled Checked</string>
    <string name="toggle_on_contrast_with_icon">On Contrast Label with Icon</string>
    <string name="toggle_on_contrast_with_icon_trailing">On Contrast Label with Icon Trailing</string>
    <string name="panel_default">Default</string>
    <string name="panel_no_padding">No padding</string>
    <string name="dialog_title">Title in here</string>
    <string name="dialog_text">Description that goes two lines ideally, but sometimes it can go longer</string>
    <string name="dialog_text_one_line">Description in here</string>
    <string name="dialog_confirmation">Confirmation</string>
    <string name="dialog_skip">Skip</string>
    <string name="dialog_link_optional">Link optional</string>
    <string name="dialog_delete">Delete</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_continue">Continue</string>
    <string name="copied_to_clipboard">\'%s\' has been copied to the clipboard</string>
    <string name="icons_story_guide">Click on icon to copy its name</string>
    <string name="icons_story_content_description">Icon \'%s\'</string>
    <string name="icons_force_rtl">Force RTL</string>
    <string name="with_icon">With icon</string>
    <string name="navigation_bar_title">Page title</string>
    <string name="navigation_back">Back</string>
    <string name="navigation_close">Close</string>
    <string name="navigation_id_card">ID Card</string>
    <string name="navigation_accessibility">Accessibility</string>
    <string name="navigation_account">Account</string>
    <string name="navigation_text_action">Text</string>
    <string name="navigation_search">Search</string>
    <string name="badge_success">Success</string>
    <string name="badge_warning">Warning</string>
    <string name="badge_destructive">Destructive</string>
    <string name="badge_normal">Normal</string>
    <string name="badge_strong">Strong</string>
    <string name="badge_inverse">Inverse</string>
    <string name="badge_outline">Outline</string>
    <string name="badge_brand">Brand</string>
    <string name="badge_subtle">Subtle</string>
    <string name="badge_apples">Apples</string>
    <string name="badge_bananas">Bananas</string>
    <string name="badge_strawberries">Strawberries</string>
    <string name="badge_pears">Pears</string>
    <string name="chip_option">Option</string>
    <string name="chip_dropdown">Dropdown</string>
    <string name="chip_dismiss">Dismiss</string>
    <string name="tabs_small">Small</string>
    <string name="tabs_small_with_icon">Small with icon</string>
    <string name="tabs_background">Custom Background (Canvas Contrast)</string>
    <string name="tabs_large">Large</string>
    <string name="tabs_large_with_icon">Large with icon</string>
    <string name="tabs_one">One</string>
    <string name="tabs_two">Two</string>
    <string name="image_skeleton_title">Image Skeleton</string>
    <string name="circle_skeleton_title">Circle Skeleton</string>
    <string name="body_text_skeleton_title">Body Text Skeleton</string>
    <string name="headline_skeleton_title">Headline Skeleton</string>
    <string name="shimmer_overlay_title">Shimmer Overlay</string>
    <string name="tokens_title">Tokens</string>
    <string name="token_placeholder">%1$s = %2$s</string>
    <string name="components_title">Components</string>
    <string name="spinner_textPrimary">TextPrimary</string>
    <string name="spinner_disabled">Disabled</string>
    <string name="spinner_onDarkSurface">OnDarkSurface</string>
    <string name="content_description">Content description</string>
    <string name="generic_default">Default</string>
    <string name="generic_with_description">With description</string>
    <string name="generic_description">Description</string>
    <string name="generic_placeholder">Placeholder</string>
    <string name="generic_no_label">No label</string>
    <string name="generic_no_description">No description</string>
    <string name="generic_read_only">Read only</string>
    <string name="generic_with_leading_icon">With leading icon</string>
    <string name="generic_single_line">Single line</string>
    <string name="generic_multiline">Multiline</string>
    <string name="generic_read_only_value">Read only value</string>
    <string name="generic_error_text">Error text</string>
    <string name="generic_message">Message</string>
    <string name="generic_scroll_the_list">Scroll the list…</string>
    <string name="generic_to_see_the_effect">to see the effect</string>
    <string name="generic_list_item">Item #%d</string>
    <string name="generic_disabled">Disabled</string>
    <string name="generic_dismiss">Dismiss</string>
    <string name="generic_empty" />
    <string name="nudger_minus_disabled">Minus Disabled</string>
    <string name="nudger_plus_disabled">Plus Disabled</string>
</resources>