<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  style="@style/App.Story"
  android:orientation="vertical">

  <net.skyscanner.backpack.text.BpkText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/text_hero1"
    app:textStyle="hero1" />

  <net.skyscanner.backpack.text.BpkText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/text_hero2"
    app:textStyle="hero2" />

  <net.skyscanner.backpack.text.BpkText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/text_hero3"
    app:textStyle="hero3" />

  <net.skyscanner.backpack.text.BpkText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/text_hero4"
    app:textStyle="hero4" />

  <net.skyscanner.backpack.text.BpkText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/text_hero5"
    app:textStyle="hero5" />
</LinearLayout>
