<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/App.Story"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical">

    <net.skyscanner.backpack.text.BpkText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/bpkSpacingSm"
        android:text="@string/circle_skeleton_title"
        app:textStyle="footnote" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/bpkSpacingMd"
        android:layoutDirection="locale"
        android:orientation="horizontal">

        <net.skyscanner.backpack.skeleton.BpkCircleSkeleton
            android:id="@+id/skeletonCircleSm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/skeletonCircleLg"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:skeletonDiameter="@dimen/bpkSpacingXl" />

        <net.skyscanner.backpack.skeleton.BpkCircleSkeleton
            android:id="@+id/skeletonCircleLg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/skeletonCircleSm"
            app:layout_constraintTop_toTopOf="parent"
            app:skeletonCircleSize="large" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <net.skyscanner.backpack.text.BpkText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/bpkSpacingSm"
        android:text="@string/image_skeleton_title"
        app:textStyle="footnote" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/bpkSpacingMd"
        android:layoutDirection="locale"
        android:orientation="horizontal">

        <net.skyscanner.backpack.skeleton.BpkImageSkeleton
            android:id="@+id/skeletonImage"
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/skeletonImageRounded"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <net.skyscanner.backpack.skeleton.BpkImageSkeleton
            android:id="@+id/skeletonImageRounded"
            android:layout_width="96dp"
            android:layout_height="64dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/skeletonImage"
            app:layout_constraintTop_toTopOf="parent"
            app:skeletonCornerType="rounded" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <net.skyscanner.backpack.text.BpkText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/bpkSpacingSm"
        android:text="@string/headline_skeleton_title"
        app:textStyle="footnote" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/bpkSpacingMd"
        android:layoutDirection="locale"
        android:orientation="horizontal">

        <net.skyscanner.backpack.skeleton.BpkHeadlineSkeleton
            android:id="@+id/skeletonHeadlineSm"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/skeletonHeadlineMd"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:skeletonHeadlineHeightSize="small" />

        <net.skyscanner.backpack.skeleton.BpkHeadlineSkeleton
            android:id="@+id/skeletonHeadlineMd"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/skeletonHeadlineLg"
            app:layout_constraintStart_toEndOf="@id/skeletonHeadlineSm"
            app:layout_constraintTop_toTopOf="parent"
            app:skeletonHeadlineHeightSize="medium" />

        <net.skyscanner.backpack.skeleton.BpkHeadlineSkeleton
            android:id="@+id/skeletonHeadlineLg"
            android:layout_width="80dp"
            android:layout_height="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/skeletonHeadlineMd"
            app:layout_constraintTop_toTopOf="parent"
            app:skeletonHeadlineHeightSize="custom" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <net.skyscanner.backpack.text.BpkText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/bpkSpacingSm"
        android:text="@string/body_text_skeleton_title"
        app:textStyle="footnote" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/bpkSpacingMd"
        android:layoutDirection="locale"
        android:orientation="vertical">

        <net.skyscanner.backpack.skeleton.BpkBodyTextSkeleton
            android:id="@+id/skeletonBodyText"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <net.skyscanner.backpack.text.BpkText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/bpkSpacingSm"
        android:text="@string/shimmer_overlay_title"
        app:textStyle="footnote" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <net.skyscanner.backpack.skeleton.BpkShimmerOverlay
            android:id="@+id/shimmerSkeleton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <include layout="@layout/skeleton_overlay_sample" />
        </net.skyscanner.backpack.skeleton.BpkShimmerOverlay>
    </LinearLayout>
</LinearLayout>
